--- a/.github/workflows/security-scan.yaml
+++ b/.github/workflows/security-scan.yaml
@@ -20,19 +20,19 @@ jobs:
             security-events: write
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
             - uses: github/codeql-action/init@v3
               with:
                 languages: go
                 source-root: ${{ matrix.projects }}
                 packs: codeql/go-all
-            # - name: Build Project ${{ matrix.projects }}
-            #   run: |
-            #     set -x
-            #     go build -o build -v ./${{ matrix.projects }}
-            - uses: github/codeql-action/autobuild@v3
-            - uses: github/codeql-action/analyze@v3
+                queries: security-extended,security-and-quality
+            - uses: actions/setup-go@v2
               with:
-                category: "/language:go"
+                go-version: '1.21'
+            - uses: github/codeql-action/autobuild@v3
+              with:
+                working-directory: ${{ matrix.projects }}
+            - uses: github/codeql-action/analyze@v3
     
     
