--- a/.github/workflows/security-scan.yaml
+++ b/.github/workflows/security-scan.yaml
@@ -21,16 +21,25 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+            - uses: dorny/paths-filter@v2
+              id: changes
+              with:
+                filters: |
+                  project:
+                    - ${{ matrix.projects }}/**
+            - uses: actions/setup-go@v4
+              with:
+                go-version: '1.21'
+                cache-dependency-path: ${{ matrix.projects }}/go.sum
             - uses: github/codeql-action/init@v3
+              if: steps.changes.outputs.project == 'true'
               with:
                 languages: go
                 source-root: ${{ matrix.projects }}
                 queries: security-extended,security-and-quality
-            - uses: actions/setup-go@v2
-              with:
-                go-version: '1.21'
             - uses: github/codeql-action/autobuild@v3
+              if: steps.changes.outputs.project == 'true'
               with:
                 working-directory: ${{ matrix.projects }}
             - uses: github/codeql-action/analyze@v3
-    
+              if: steps.changes.outputs.project == 'true'
