--- a/.github/workflows/security-scan.yaml
+++ b/.github/workflows/security-scan.yaml
@@ -8,12 +8,22 @@ on:
     schedule:
     - cron: "0 0 * * *"
 jobs:
+    find-go-projects:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v4
+          - name: Find go projects
+            run: |
+              GO_PROJECTS=$(find . -name go.mod -exec dirname {} \;)
+              echo "go-projects=$GO_PROJECTS" >>"$GITHUB_ENV"
     analyze:
+        needs: find-go-projects
         runs-on: ubuntu-latest
         strategy:
             fail-fast: false
             matrix:
-                projects: ["project1", "project2"]
+                projects: ${{ fromJson(needs.find-go-projects.outputs.go-projects) }}
         permissions:
             actions: read
             contents: read
