--- a/.github/workflows/security-scan.yaml
+++ b/.github/workflows/security-scan.yaml
@@ -10,20 +10,27 @@ on:
 jobs:
     find-go-projects:
         runs-on: ubuntu-latest
+        outputs:
+            go-projects: ${{ steps.find-go-projects.outputs.go-projects }}
         steps:
           - name: Checkout
             uses: actions/checkout@v4
+          - uses: actions/setup-go@v4
+            with:
+              cache: false
           - name: Find go projects
+            id: find-go-projects
             run: |
-              GO_PROJECTS=$(find . -name go.mod -exec dirname {} \;)
-              echo "go-projects=$GO_PROJECTS" >>"$GITHUB_ENV"
+              GO_PROJECTS=$(find . -name go.mod -exec dirname {} \; | jq -R -s -c 'split("\n")[:-1]')
+              echo "found go projects: $GO_PROJECTS"
+              echo "go-projects=$GO_PROJECTS" >> "$GITHUB_OUTPUT"
     analyze:
         needs: find-go-projects
         runs-on: ubuntu-latest
         strategy:
             fail-fast: false
             matrix:
-                projects: ${{ fromJson(needs.find-go-projects.outputs.go-projects) }}
+                projects: ${{ fromJson( needs.find-go-projects.outputs.go-projects ) }}
         permissions:
             actions: read
             contents: read
